--- a/docs_edit_panel/style.css
+++ b/docs_edit_panel/style.css
@@ -43,3 +43,20 @@
   grid-auto-flow: row;
   grid-row-gap: 1.5rem;
 }
+
+.dropdown-container {
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.dropdown-container label {
+  display: block;
+  color: var(--vscode-foreground);
+  cursor: pointer;
+  font-size: var(--vscode-font-size);
+  line-height: normal;
+  margin-bottom: 2px;
+}
