--- a/docs_edit_panel/style.css
+++ b/docs_edit_panel/style.css
@@ -19,17 +19,6 @@
   width: fit-content;
 }
 
-#spinner {
-  display: block;
-  position: fixed;
-  min-width: 25px;
-  width: 25px;
-  height: 25px;
-  top: 50%;
-  left: 50%;
-  z-index: 99;
-}
-
 @media screen and (min-width: 1024px) {
   #app {
     padding: 0 8rem;
@@ -59,4 +48,15 @@
   font-size: var(--vscode-font-size);
   line-height: normal;
   margin-bottom: 2px;
+}
+
+#spinner {
+  display: block;
+  min-width: 100px;
+  width: 100px;
+  height: 100px;
+  margin-top: 25px;
+  justify-self: center;
+  margin-left: auto;
+  margin-right: auto;
 }
