Move documentation to separate component

--- a/docs_edit_panel/style.css
+++ b/docs_edit_panel/style.css
@@ -11,7 +11,7 @@
   grid-row-gap: 1.5rem;
 }
 
-#columns-form {
+.documentation {
   display: grid;
   grid-auto-flow: row;
   grid-row-gap: 1.5rem;
