feat: add select

--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -96,6 +96,10 @@ button:focus-visible {
   -webkit-box-orient: vertical;
 }
 
+.text-primary {
+  color: #247efe;
+}
+
 .text-muted {
   color: #8390a3;
 }
