--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -117,3 +117,11 @@ button:focus-visible {
 .invisible {
   visibility: hidden;
 }
+
+.spacer {
+  flex-grow: 1;
+}
+
+.fw-semibold {
+  font-weight: 600;
+}
