--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -114,3 +114,11 @@ body {
   background-color: #247efe;
   color: #ffffff;
 }
+
+.bg-gray {
+  background-color: #f5f6f7;
+}
+
+.bg-blue {
+  background-color: #eaf3ff;
+}
