--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -22,12 +22,28 @@ body {
   align-items: center;
 }
 
+.gap-xxs {
+  gap: 0.2em;
+}
+
 .gap-xs {
-  gap: 1em;
+  gap: 0.4em;
 }
 
 .gap-sm {
+  gap: 0.8em;
+}
+
+.gap-md {
+  gap: 1em;
+}
+
+.gap-lg {
   gap: 1.2em;
+}
+
+.gap-xl {
+  gap: 2rem;
 }
 
 .p-2 {
@@ -36,6 +52,34 @@ body {
 
 .mb-3 {
   margin-bottom: 0.75em;
+}
+
+.mt-3 {
+  margin-top: 0.75em;
+}
+
+.ms-3 {
+  margin-left: 0.75em;
+}
+
+.me-3 {
+  margin-right: 0.75em;
+}
+
+.mb-2 {
+  margin-bottom: 0.5em;
+}
+
+.mt-2 {
+  margin-top: 0.5em;
+}
+
+.ms-2 {
+  margin-left: 0.5em;
+}
+
+.me-2 {
+  margin-right: 0.5em;
 }
 
 .h-100 {
