--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -19,13 +19,9 @@ $node-width: 260px;
 
 .table_header {
   display: grid;
-  grid-template-columns: 0em 1fr;
+  grid-template-columns: 1.5rem 1fr;
   gap: 0em 0.5em;
   width: 100%;
-  height: 4em;
-  div {
-    height: fit-content;
-  }
 }
 
 $size: 1.2em;
