--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -52,6 +52,7 @@ body {
   overflow: hidden;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  word-break: break-all;
 }
 
 .text-primary {
