--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -145,3 +145,9 @@ $diff: 0.25em;
   border-radius: 0.5rem;
   padding: 0.5rem;
 }
+
+.column_tag {
+  background: rgba(63, 140, 255, 0.1);
+  font-size: 0.8em;
+  color: #082247;
+}
