--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -7,9 +7,29 @@ $node-width: 260px;
   cursor: default;
 
   .header {
+    background: #eaf3ff;
+    border-top: 2px solid #eeeff2;
+    border-left: 2px solid #eeeff2;
+    border-right: 2px solid #eeeff2;
+    border-radius: 0.5em 0.5em 0 0;
+    padding: 0.5em;
+    &.collapse {
+      background: #ffffff;
+      border-bottom: 2px solid #eeeff2;
+      border-radius: 0.5em;
+    }
+    &.selected {
+      border-color: #e38e00;
+    }
+  }
+
+  .content {
+    flex-grow: 1;
     background: #ffffff;
-    border: 2px solid #eeeff2;
-    border-radius: 0.5em;
+    border-bottom: 2px solid #eeeff2;
+    border-left: 2px solid #eeeff2;
+    border-right: 2px solid #eeeff2;
+    border-radius: 0 0 0.5em 0.5em;
     padding: 0.5em;
     &.selected {
       border-color: #e38e00;
