--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -9,9 +9,9 @@ $border-color: rgba(#a7b2c1, 0.3);
 
   .header {
     background: #eaf3ff;
-    border-top: 2px solid #eeeff2;
-    border-left: 2px solid #eeeff2;
-    border-right: 2px solid #eeeff2;
+    border-top: 2px solid $border-color;
+    border-left: 2px solid $border-color;
+    border-right: 2px solid $border-color;
     border-radius: 0.5em 0.5em 0 0;
     padding: 0.5em;
     &.collapse {
@@ -28,7 +28,10 @@ $border-color: rgba(#a7b2c1, 0.3);
     flex-grow: 1;
     background: #ffffff;
     border: 2px solid $border-color;
-    border-radius: 0.5em;
+    border-bottom: 2px solid $border-color;
+    border-left: 2px solid $border-color;
+    border-right: 2px solid $border-color;
+    border-radius: 0 0 0.5em 0.5em;
     padding: 0.5em;
     &.selected {
       border-color: #e38e00;
