--- a/lineage_panel/style.css
+++ b/lineage_panel/style.css
@@ -1,29 +1,32 @@
-.panel-tabs-container {
+.top-right-container {
   position: absolute;
   top: 16px;
   right: 16px;
   display: flex;
-  background-color: #ffffff;
-  border-radius: 8px;
   gap: 8px;
 }
 
-.panel-tab {
-  padding: 8px 16px 8px 16px;
-  cursor: pointer;
-  border-radius: 8px;
-  background-color: #ffffff;
-  color: #247efe;
-}
-
-.panel-tab:hover {
-  background-color: #247efe22;
-}
-
-.panel-tab-selected {
-  padding: 8px 16px 8px 16px;
-  cursor: pointer;
-  border-radius: 8px;
-  background-color: #247efe;
+.btn {
+  display: inline-block;
+  padding: 0.375rem 0.75rem;
   color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  user-select: none;
+  border: 1px solid #0d6efd;
+  border-radius: 0.375rem;
+  background-color: #0d6efd;
+  font-size: 1rem;
+  transition:
+    color 0.15s ease-in-out,
+    background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
+}
+
+.btn:hover {
+  background-color: #0b5ed7;
+  border-color: #0a58ca;
 }
