--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -81,3 +81,15 @@ body {
   gap: 8px;
   z-index: 10;
 }
+
+.bg-gray {
+  background-color: #f5f6f7;
+}
+
+.bg-blue {
+  background-color: #eaf3ff;
+}
+
+.fs-xxs {
+  font-size: 0.875rem;
+}
