added dark mode(squashed)
feat: added basic dark mode

feat: support for some elements

WIP

WIP

WIP

WIP

WIP

WIP

WIP

refactor: code

WIP

fix: highlight edges

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

--- a/new_lineage_panel/src/SidebarModal/SidebarModal.css
+++ b/new_lineage_panel/src/SidebarModal/SidebarModal.css
@@ -2,10 +2,7 @@
   position: fixed;
   top: -1px;
   height: calc(100% + 1px);
-  background-color: white;
   box-shadow: none;
-  border: 1px solid #e7e8ea;
-  background: #fefefe;
   transition: transform 0.3s ease-in-out;
   z-index: 997;
 }
@@ -49,5 +46,5 @@
   cursor: pointer;
   z-index: 999;
   padding: 8px;
-  background: var(--blue-primary, #247efe);
+  background: var(--primary-accent, #247efe);
 }
