fix: remove styling from input

--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -14,7 +14,10 @@ html {
   --column-section-bg: #f5f6f7;
   --tag-bg: rgba(63, 140, 255, 0.1);
   --tag-text-color: #082247;
-  --placeholder-color: rgba(8, 34, 71, 0.5);
+  --input-placeholder-color: rgba(8, 34, 71, 0.5);
+  --input-bg: #ffffff;
+  --input-text-color: #212529;
+  --input-border-color: #dee2e6;
 }
 
 html[data-theme="dark"] {
@@ -33,7 +36,10 @@ html[data-theme="dark"] {
   --column-section-bg: #3c3c3c;
   --tag-bg: rgba(255, 255, 255, 0.1);
   --tag-text-color: #ffffff;
-  --placeholder-color: #ffffff;
+  --input-placeholder-color: #ffffff;
+  --input-bg: rgba(131, 144, 163, 0.2);
+  --input-text-color: #ffffff;
+  --input-border-color: rgba(131, 144, 163, 0.1);
 }
 
 body {
@@ -129,17 +135,23 @@ body {
   background-color: var(--column-section-bg);
 }
 
+.custom-input {
+  background-color: var(--input-bg) !important;
+  color: var(--input-text-color) !important;
+  border-color: var(--input-border-color) !important;
+}
+
 .custom-input::placeholder {
-  color: var(--placeholder-color) !important;
+  color: var(--input-placeholder-color) !important;
   opacity: 1 !important;
 }
 
 .custom-input::-moz-placeholder {
-  color: var(--placeholder-color) !important;
+  color: var(--input-placeholder-color) !important;
   opacity: 1 !important;
 }
 
 .custom-input::-ms-input-placeholder {
-  color: var(--placeholder-color) !important;
+  color: var(--input-placeholder-color) !important;
   opacity: 1 !important;
 }
