fix: column offset

--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -43,6 +43,8 @@ $border-color: rgba(#a7b2c1, 0.3);
   grid-template-columns: 1.5rem 1fr;
   gap: 0em 0.5em;
   width: 100%;
+  height: 3em;
+  align-items: center;
 }
 
 $size: 1.2em;
