--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -1,5 +1,52 @@
+html {
+  --bg-color: #f5f5f7;
+  --primary-accent: #247efe;
+  --column-node-bg: #e9f2ff;
+  --column-node-color: var(--primary-accent);
+  --text-color: #000000;
+  --card-bg: #ffffff;
+  --card-border-color: #e7e8ea;
+  --table-node-border-color: rgba(167, 178, 193, 0.3);
+  --table-node-expand-bg: #eaf3ff;
+  --table-node-collapse-bg: #ffffff;
+  --table-node-content-bg: #ffffff;
+  --text-grey-color: #8390a3;
+  --purpose-section-bg: #eaf3ff;
+  --column-section-bg: #f5f6f7;
+  --tag-bg: rgba(63, 140, 255, 0.1);
+  --tag-text-color: #082247;
+  --input-placeholder-color: rgba(8, 34, 71, 0.5);
+  --input-bg: #ffffff;
+  --input-text-color: #212529;
+  --input-border-color: #dee2e6;
+}
+
+html[data-theme="dark"] {
+  --bg-color: #1e1e1e;
+  --primary-accent: #247efe;
+  --column-node-bg: rgba(131, 144, 163, 0.2);
+  --column-node-color: #ffffff;
+  --text-color: #ffffff;
+  --card-bg: #252526;
+  --card-border-color: #d5dbe433;
+  --table-node-border-color: rgba(213, 219, 228, 0.1);
+  --table-node-expand-bg: #494e56;
+  --table-node-collapse-bg: #3a3d41;
+  --table-node-content-bg: #3a3d41;
+  --text-grey-color: #66768d;
+  --purpose-section-bg: #3c3c3c;
+  --column-section-bg: #3c3c3c;
+  --tag-bg: rgba(255, 255, 255, 0.1);
+  --tag-text-color: #ffffff;
+  --input-placeholder-color: #ffffff;
+  --input-bg: rgba(131, 144, 163, 0.2);
+  --input-text-color: #ffffff;
+  --input-border-color: rgba(131, 144, 163, 0.1);
+}
+
 body {
   padding: 0;
+  color: var(--text-color);
 }
 
 .position-relative {
@@ -43,16 +90,12 @@ body {
   word-break: break-all;
 }
 
-.text-primary {
-  color: #247efe;
+.text-blue {
+  color: var(--primary-accent);
 }
 
-.text-muted {
-  color: #8390a3;
-}
-
-.text-black {
-  color: #000000;
+.text-grey {
+  color: var(--text-grey-color);
 }
 
 .text-overflow {
@@ -82,14 +125,35 @@ body {
   z-index: 10;
 }
 
-.bg-gray {
-  background-color: #f5f6f7;
-}
-
-.bg-blue {
-  background-color: #eaf3ff;
-}
-
 .fs-xxs {
   font-size: 0.875rem;
+}
+
+.purpose-section {
+  background-color: var(--purpose-section-bg);
+}
+
+.column-section {
+  background-color: var(--column-section-bg);
+}
+
+.custom-input {
+  background-color: var(--input-bg) !important;
+  color: var(--input-text-color) !important;
+  border-color: var(--input-border-color) !important;
+}
+
+.custom-input::placeholder {
+  color: var(--input-placeholder-color) !important;
+  opacity: 1 !important;
+}
+
+.custom-input::-moz-placeholder {
+  color: var(--input-placeholder-color) !important;
+  opacity: 1 !important;
+}
+
+.custom-input::-ms-input-placeholder {
+  color: var(--input-placeholder-color) !important;
+  opacity: 1 !important;
 }
