--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -222,3 +222,9 @@ $size: 1.2em;
   padding: 0.2em !important;
   font-size: 0.8em;
 }
+
+.menu_card_container {
+  background-color: var(--card-bg) !important;
+  border-color: var(--card-border-color) !important;
+  color: var(--text-color) !important;
+}
