--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -192,3 +192,39 @@ $size: 1.2em;
   gap: 0em 0.5em;
   align-items: center;
 }
+
+.verticle_divider {
+  width: 2px;
+  background-color: #c4cad2;
+}
+
+.low_confidence {
+  padding: 0.125em 0.75em;
+  border-radius: 0.375rem;
+  background: #ff754c;
+  color: white;
+}
+
+.high_confidence {
+  padding: 0.125em 0.75em;
+  border-radius: 0.375rem;
+  background: #327e36;
+  color: white;
+}
+
+.alert_icon {
+  width: 1rem;
+  height: 1rem;
+  display: flex;
+}
+
+.menu_card {
+  padding: 0.275em !important;
+  font-size: 0.875em;
+}
+
+.menu_card_container {
+  background-color: var(--card-bg) !important;
+  border-color: var(--card-border-color) !important;
+  color: var(--text-color) !important;
+}
