--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -158,3 +158,7 @@ body {
   color: var(--input-placeholder-color) !important;
   opacity: 1 !important;
 }
+
+.cursor-pointer {
+  cursor: pointer;
+}
