--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -249,3 +249,20 @@ $size: 1.2em;
     }
   }
 }
+
+.table_node_pill {
+  display: flex;
+  align-items: center;
+  border-radius: 0.5em;
+  border: 1px solid var(--card-border-color);
+  gap: 0.25em;
+  padding: 0em 0.25em;
+
+  .icon {
+    $size: 1rem;
+    width: $size;
+    height: $size;
+    display: flex;
+    align-items: center;
+  }
+}
