--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -257,6 +257,7 @@ $size: 1.2em;
   border: 1px solid var(--card-border-color);
   gap: 0.25em;
   padding: 0.125em 0.325em;
+  font-size: 0.8em;
 
   .icon {
     $size: 1rem;
