--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -267,3 +267,21 @@ $size: 1.2em;
     align-items: center;
   }
 }
+
+.node-checkbox {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  padding: 0.125em 0.5em;
+  border-radius: 0.5em;
+}
+
+.select_node_checkbox {
+  @extend .node-checkbox;
+  border: 2px solid var(--card-border-color);
+}
+
+.non_select_node_checkbox {
+  @extend .node-checkbox;
+  border: 2px dashed var(--card-border-color);
+}
