feat: added preview icon
feat: add info dialog on click

feat: added preview feature for lineage

feat: preview dbt

fix: preview icons

feat: change text and url

fix: icons

refactor: code

code cleanup

fix: text and visibility

fix: as per comments

feat: added preview for query explanation

refactor: code

fix: url

fix: explain preview

fix: explain sql icon

--- a/new_lineage_panel/src/index.css
+++ b/new_lineage_panel/src/index.css
@@ -162,3 +162,26 @@ body {
 .cursor-pointer {
   cursor: pointer;
 }
+
+.tooltip-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.tooltip-container:hover .tooltip-text {
+  display: block;
+}
+
+.tooltip-text {
+  display: none;
+  position: absolute;
+  bottom: 125%;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 8px;
+  color: #082247;
+  border-radius: 4px;
+  white-space: nowrap;
+  background: #ffce73;
+}
