--- a/webview_panels/src/modules/defer/defer.module.scss
+++ b/webview_panels/src/modules/defer/defer.module.scss
@@ -1,21 +1,26 @@
-.card-title {
-  & button {
-    float: right;
-    padding: 0;
-    border: none;
-    margin-top: -6px;
-  }
-}
-
-.form-switch {
-  padding-left: 0;
+.insights-card {
   & :global .form-label {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
+    white-space: nowrap;
+  }
+  .card-title {
+    & button {
+      float: right;
+      padding: 0;
+      border: none;
+      margin-top: -6px;
+    }
+  }
 
-    & input {
-      float: none;
+  .form-switch {
+    padding-left: 0;
+    & :global .form-label {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+
+      & input {
+        float: none;
+      }
     }
   }
 }
