feat: documentation result and uicore components

--- a/webview_panels/src/uiCore/theme.scss
+++ b/webview_panels/src/uiCore/theme.scss
@@ -6,9 +6,9 @@
   & .card-title {
     font-size: 12px;
     color: var(--text-color);
+    margin-bottom: 0.75rem;
   }
   & .card-body {
-    margin-top: 0.75rem;
     padding: 0;
     & .card-text {
       font-size: 12px;
