--- a/webview_panels/src/main.css
+++ b/webview_panels/src/main.css
@@ -23,8 +23,9 @@ html {
   --input-text-color: #212529;
   --input-border-color: #dee2e6;
   --Text-Neutral: #c4cad2;
-  --Action-Red: #EE140F;
+  --Action-Red: #ee140f;
   --dropdown-toggle-color: #1c1c1c;
+  font-size: 14px;
 }
 
 html[data-theme="dark"] {
@@ -48,7 +49,7 @@ html[data-theme="dark"] {
   --input-bg: rgba(131, 144, 163, 0.2);
   --input-text-color: #ffffff;
   --input-border-color: rgba(131, 144, 163, 0.1);
-  --Action-Red: #EE140F;
+  --Action-Red: #ee140f;
   --dropdown-toggle-color: #1c1c1c;
 }
 
@@ -60,4 +61,14 @@ body {
   padding-right: 20px;
   padding-top: 25px;
   padding-bottom: 25px;
+}
+
+b,
+strong {
+  font-weight: 600;
+}
+
+.h5,
+h5 {
+  font-size: 1.15rem;
 }
