fix: ui for docs generator

--- a/webview_panels/src/modules/documentationEditor/styles.module.scss
+++ b/webview_panels/src/modules/documentationEditor/styles.module.scss
@@ -1,6 +1,7 @@
 .doc-generator {
   & .head {
     justify-content: space-between;
+    margin-bottom: 1rem;
     & p {
       text-decoration: underline;
     }
